discussion/kv_engine/161699/161699_rev22_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48531: Shard the Checkpoint Remover Task

The new 'checkpoint_removers' param in configuration defines the number
of concurrent tasks.

Each task is assigned a Task::removerId in [0, num_removers - 1]. Each
task is then responsible for touching only vbuckets that verify
(vbid % numRemovers == removerId).

Change-Id: I3b36d1ea264c37f9a8933bfd0523d796a18a4807

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-10-13 10:01:38.000000000
Message: 
Uploaded patch set 22.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-13 10:08:18.000000000
Message: 
Patch Set 22: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34951/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34951/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41114/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41114/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3092/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3092/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15069/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15069/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15343/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15343/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15973/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23375/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23375/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13459/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_remover_test.cc:69:31: error: use of undeclared identifier "getVbucketsSortedByChkMem" [clang-diagnostic-error]
        const auto vbuckets = getVbucketsSortedByChkMem(*remover);
                              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13459/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_remover_test.cc:69:31:
error: use of undeclared identifier "getVbucketsSortedByChkMem" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13459/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14223/ : FAILURE

Compile error at [2021-10-13T10:05:13.378Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_remover_test.cc:69:31:
error: use of undeclared identifier "getVbucketsSortedByChkMem"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14223/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3157/ : FAILURE

Compile error at [2021-10-13T10:07:16.145Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_remover_test.cc:69:31:
error: ?getVbucketsSortedByChkMem? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3157/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12246/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
